# llmcmd

./: .gitignore  AGENTS.md  CONFIGURATION.md  DEVELOPING.md  README.md  SKILL.md  grok请求响应适配需求.md  llm.py  pyproject.toml
docs/dev-spec/: llm-cli技术设计.md
docs/superpowers/plans/: 2026-03-22-image-input-plan.md  2026-03-26-video-command.md  2026-04-22-chat-video-input.md
docs/superpowers/specs/: 2026-03-22-image-input-design.md
docs/模型能力和请求方式/: gemini-2.5-flash-image.md  gemini-2.5-flash.md  gemini-3-flash.md  gemini-3.1-flash-image.md  gemini-3.1-flash-lite.md  gemini-3.1-flash-tts-preview.md  gpt-image-2.md  llmcmd-附件提交方式.md  总览.md
examples/batch/: full-template.yaml
src/llm_cli/: api.py  batch.py  cli.py  config.py  files.py  interactive.py  messages.py  output.py  pi_agent.py  reference_transport.py  session.py  task.py  utils.py
tests/: test_chat_session.py  test_gpt_image_2.py
